# pysnapping

./: .gitlab-ci.yml  .pre-commit-config.yaml  MANIFEST.in  README.md  dev-requirements.in  dev-requirements.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py
pysnapping/: __init__.py  conversion.py  interpolate.py  linear_referencing.py  ordering.py  shapes.py  snap.py  stats.py  util.py
pysnapping/test/: complex_trip.geojson  conftest.py  test_conversion.py  test_interpolate.py  test_linear_referencing.py  test_linref.py  test_misc.py  test_ordering.py  test_snap.py  test_util.py
