[project]
name = "pysnapping"
description = "Snap points to a line string keeping a given order intact"
readme = "README.md"
dependencies = [
  "shapely",
  "numpy",
  "pyproj>=3.2.0",  # for defining custom CRS
  "cvxpy",
]
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [{name = "Alexander Held | geOps", email = "alexander.held@geops.com"}]
maintainers = [{name = "Alexander Held | geOps", email = "alexander.held@geops.com"}]
keywords = [
  "snapping",
  "projecting",
  "linear referencing",
  "order",
  "linestring",
  "GIS",
  "quadratic programming",
  "GTFS",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Topic :: Scientific/Engineering :: GIS",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/geops/pysnapping"
geOps = "https://geops.com/en"

[build-system]
requires = ["setuptools>=61", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.setuptools.packages.find]
include = ["pysnapping", "pysnapping.*"]
